fix: moves relatedTopics, fix list overflow, and misc styling tweaks

--- a/src/app/community-help/index.module.scss
+++ b/src/app/community-help/index.module.scss
@@ -57,6 +57,7 @@
 
 .title {
   margin: 0;
+  word-break: break-all;
 
   @include small-break {
     margin-bottom: calc(var(--base)*0.25);
