--- a/src/components/DiscordGitIntro/index.module.scss
+++ b/src/components/DiscordGitIntro/index.module.scss
@@ -12,6 +12,7 @@
 .title {
   @include h3;
   text-decoration: none;
+  word-break: break-all;
 }
 
 .authorDetails {
